[package]
name = "stdcode"
description = "Collection of serialization-related utilities for Themelio"
version = "0.1.2"
authors = ["Themelio Labs"]
edition = "2018"
license = "ISC"
repository = "https://github.com/themeliolabs/themelio-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode= "1.3.3"
serde= "1.0.126"
hex= "0.4.3"
