[package]
name = "themelio-crypttool"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"
description = "multitool for themelio cryptography"
license="ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde_json = "1.0.83"
stdcode = { version = "0.1.10", path = "../stdcode" }
structopt = "0.3.26"
themelio-stf = "0.11.9"
themelio-structs = "0.2.10"
tmelcrypt = "0.2.4"
 