[package]
name = "tmelcrypt"
version = "0.2.5"
authors = ["Themelio Labs"]
edition = "2018"

description = "Collection of cryptographic utilities for Themelio"
license = "ISC"
repository = "https://github.com/themeliolabs/themelio-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.arbitrary]
version = "1.0.3"
features = ["derive"]


[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.stdcode]
version = "0.1.11"
path = "../stdcode"

[dependencies]
base32 = "0.4.0"
blake3 = "1.2.0"
hex = "0.4.3"
log = "0.4.14"

rand = "0.8"
serde-big-array = "0.3.2"
ed25519-consensus = "1"
arrayref = "0.3.6"
